frontend/src/assets/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

*{
  box-sizing: border-box;
}

.table-shadow {
  box-shadow: 0 -5px 5px -5px rgb(231, 231, 231);
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: white;
}

.dark body {
  background-color: #1e2029;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.no-scrollbar::-webkit-scrollbar {
  display: none;
}

.no-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.custom-scroll::-webkit-scrollbar-button {
  display: none;
}

.custom-scroll::-webkit-resizer {
  display: none;
  visibility: hidden;
}

.custom-scroll::-webkit-scrollbar {
  width: 3px;
}

.custom-scroll::-webkit-scrollbar-track {
  width: 0;
}

.custom-scroll::-webkit-scrollbar-thumb {
  background-color: #333333;
  opacity: 40%;
  border-radius: 2.5px;
}

.spinner {
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
  height: 56px;
  width: 56px;
  box-sizing: border-box;
  background: conic-gradient(from 90deg at 50% 50%, rgba(255, 255, 255, 0.0001) 0deg, #454545 359.96deg, rgba(255, 255, 255, 0.0001) 360deg);
  border-radius: 56px;
  animation: 1s rotate infinite linear;
}

.dark .spinner {
  background: conic-gradient(from 90deg at 50% 50%, rgba(255, 255, 255, 0.0001) 0deg, #E2E2E4 359.96deg, rgba(255, 255, 255, 0.0001) 360deg);
}

.spinner::before {
  content: "";
  height: 40px;
  width: 40px;
  background: #fff;
  border-radius: 48px;
}

.dark .spinner::before {
  background: #1a1a1a;
}

.spinner::after {
  content: "";
  position: absolute;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  height: 8px;
  width: 8px;
  background: #454545;
  border-radius: 8px;
}

.dark .spinner::after {
  background: #E2E2E4;
}

@keyframes rotate {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

